<resources>
    <string name="app_name">Athletier</string>
    <string name="navigation_main">Navigation</string>
    <string name="title_profile_tab">Profile</string>
    <string name="title_map_tab">Map</string>
    <string name="title_challenges_tab">Challenges</string>
    <string name="title_leaderboards_tab">Rankings</string>
    <string name="title_teams_tab">Teams</string>
    <string name="title_search_tab">Search</string>
    <string name="user">User</string>
    <string name="search">Enter User\'s Email</string>
    <string name="enter">Enter</string>
    <string name="create_challenge_title">Create New Challenge</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="create_title">Create</string>
    <string name="date_title">Date: </string>
    <string name="invalid_address_msg">Entered address is invalid. Please try again.</string>
    <string name="user_name">Username</string>
    <string name="log_out">Sign Out</string>
    <string name="friends">Friends</string>
    <string name="add_friends">Add Friend</string>
    <string name="_3v3_basketball">3v3 Basketball</string>
    <string name="spikeball">Spikeball</string>
    <string name="golf">Golf</string>
    <string name="tennis">Tennis</string>
    <string name="squash">Squash</string>
    <string name="team_name">Team Name</string>
    <string name="follow_me">Follow Me</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="record_string">Record</string>
    <string name="selected_challenge_title">Challenge</string>
    <string name="join_request_title">Join</string>
    <string name="sport_title">Sport:</string>
    <string name="host_title">Host User:</string>
    <string name="address_title">Address: </string>
    <string name="status_title">Status:</string>
    <string name="view_profile_title">View Profile</string>
    <string name="left_chevron"><![CDATA[<]]></string>
    <string name="right_chevron"><![CDATA[>]]></string>
    <string name="failed">Invalid Email</string>
    <string name="image">Image</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="you_challenged">YOU CHALLENGED</string>
    <string name="challenged_you">CHALLENGED YOU</string>
    <string name="time_title">Time:</string>
    <string name="finish">Finish</string>
    <string name="rate">Rate</string>
    <string name="report_winner">Report Winner</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="awaiting_challenger">Awaiting Challenger…</string>
    <string name="confirm_winner">Confirm Winner</string>
    <string name="winner">Winner: </string>
    <string name="pts">pts</string>
    <string name="rank">Rank</string>
    <string name="tier">Tier</string>
    <string name="select_winner_title">Select Winner</string>
    <string name="i_won">I won</string>
    <string name="i_lost">I lost</string>
    <string name="logout">Logout</string>
    <string name="exp">Exp</string>
    <string name="waiting_for_confirmation">Waiting for confirmation</string>
    <string name="waiting_on_user">Awaiting your report…</string>
    <string name="result_disputed">Opponent disputed winner…</string>
    <string name="change_winner">Change Winner</string>
    <string name="rate_sportsmanship">Rate Sportsmanship</string>
    <string name="award_badges">Award Badges</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="rate_opponent">Rate Your Opponent</string>
    <string name="challenge_me">Challenge Me</string>
    <string name="max_badge_count">99+</string>
    <string name="sportsmanship_rating">Sportsmanship Rating</string>
    <string name="congratulations">Congratulations!</string>
    <string name="athletier">Athletier</string>
</resources>
