<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile_tab" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map_tab" />

    <item
        android:id="@+id/navigation_challenges"
        android:icon="@drawable/ic_golf_course_black_24dp"
        android:title="@string/title_challenges_tab" />

    <item
        android:id="@+id/navigation_leaderboards"
        android:icon="@drawable/ic_format_list_numbered_black_24dp"
        android:title="@string/title_leaderboards_tab"/>

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_teams_tab"/>
</menu>
