<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_mobile"
    android:label="@string/navigation_main"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.CS5520.athletier.ui.Profile.ProfileTabFragment"
        android:label="@string/title_profile_tab"
        tools:layout="@layout/fragment_profile_tab" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.CS5520.athletier.ui.Map.MapTabFragment"
        android:label="@string/title_map_tab"
        tools:layout="@layout/fragment_map_tab" />

    <fragment
        android:id="@+id/navigation_challenges"
        android:name="com.CS5520.athletier.ui.Challenges.ChallengesTabFragment"
        android:label="@string/title_challenges_tab"
        tools:layout="@layout/fragment_challenges_tab" />
    <fragment
        android:id="@+id/navigation_leaderboards"
        android:name="com.CS5520.athletier.ui.Leaderboards.LeaderboardsTabFragment"
        android:label="@string/title_leaderboards_tab"
        tools:layout="@layout/fragment_leaderboards_tab" />
    <fragment
        android:id="@+id/navigation_teams"
        android:name="com.CS5520.athletier.ui.Teams.TeamsTabFragment"
        android:label="@string/title_teams_tab"
        tools:layout="@layout/fragment_teams_tab" />
</navigation>