<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#818181"
            android:orientation="vertical"
            tools:context="com.CS5520.athletier.ui.Teams.TeamsTabFragment">


            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/_3v3_basketball"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/team_name"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_marginEnd="85dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/spikeball"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/team_name"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_marginEnd="85dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/golf"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="Team Name"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_marginEnd="85dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/tennis"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/team_name"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_marginEnd="85dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/squash"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/team_name"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:layout_marginEnd="85dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>