<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:scaleType="centerCrop"
                android:clickable="true"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sportChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:clickable="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_title"
                        android:layout_weight="3.5"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dateText"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addressTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:text="@string/address_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/addressText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_marginTop="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statusTitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.5"
                        android:text="@string/status_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/statusText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_marginTop="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp">

                    <Button
                        android:id="@+id/cellLeftButton"
                        style="@style/Widget.AppCompat.ButtonBar"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_button"
                        android:textColor="@android:color/white"
                        android:layout_marginEnd="4dp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"/>

                    <Button
                        android:id="@+id/cellRightButton"
                        style="@style/Widget.AppCompat.ButtonBar"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/rounded_button"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>